Non tender endpoint
